tests/suite/fail/regression/reg_move_18.ny
fn take(x: string) -> void { print(x) }
fn main() {
    let s = "r18"
    take(s)
    print(s) //~ ERROR was moved
}
